--- a/Content.Client/Theta/ShipEvent/Console/CannonConsoleWindow.xaml
+++ b/Content.Client/Theta/ShipEvent/Console/CannonConsoleWindow.xaml
@@ -1,6 +1,12 @@
 ﻿<controls:FancyWindow xmlns="https://spacestation14.io"
                       xmlns:controls="clr-namespace:Content.Client.UserInterface.Controls"
                       xmlns:ui="clr-namespace:Content.Client.Theta.ShipEvent.Console"
-                      Title="{Loc 'radar-console-window-title'}">
-    <ui:CannonRadarControl Name="RadarScreen" MouseFilter="Stop"/>
+                      Title="{Loc 'radar-console-window-title'}"
+                      MinSize="256 256"
+                      SetSize="648 648">
+    <ui:CannonRadarControl Name="RadarScreen"
+                           MouseFilter="Stop"
+                           Margin="4"
+                           HorizontalExpand="True"
+                           VerticalExpand="True" />
 </controls:FancyWindow>
