--- a/Content.Client/Shuttles/UI/RadarConsoleWindow.xaml
+++ b/Content.Client/Shuttles/UI/RadarConsoleWindow.xaml
@@ -4,7 +4,7 @@
                       Title="{Loc 'radar-console-window-title'}"
                       SetSize="648 648"
                       MinSize="256 256">
-    <ui:DefaultRadarControl Name="RadarScreen"
+    <ui:RadarControl Name="RadarScreen"
                             MouseFilter="Stop"
                             Margin="4"
                             HorizontalExpand="True"
