--- a/Content.Client/Theta/ShipEvent/Console/CannonConsoleWindow.xaml
+++ b/Content.Client/Theta/ShipEvent/Console/CannonConsoleWindow.xaml
@@ -1,10 +1,10 @@
 ﻿<controls:FancyWindow xmlns="https://spacestation14.io"
                       xmlns:controls="clr-namespace:Content.Client.UserInterface.Controls"
-                      xmlns:ui="clr-namespace:Content.Client.Theta.ShipEvent.Console"
+                      xmlns:ui="clr-namespace:Content.Client.Shuttles.UI"
                       Title="{Loc 'cannon-console-window-title'}"
                       MinSize="256 256"
                       SetSize="648 648">
-    <ui:CannonRadarControl Name="RadarScreen"
+    <ui:RadarControl Name="RadarScreen"
                            MouseFilter="Stop"
                            Margin="4"
                            HorizontalExpand="True"
