--- a/Content.Client/Theta/ShipEvent/Console/CannonConsoleWindow.xaml
+++ b/Content.Client/Theta/ShipEvent/Console/CannonConsoleWindow.xaml
@@ -1,12 +1,25 @@
 ﻿<controls:FancyWindow xmlns="https://spacestation14.io"
                       xmlns:controls="clr-namespace:Content.Client.UserInterface.Controls"
                       xmlns:ui="clr-namespace:Content.Client.Shuttles.UI"
+                      xmlns:inv="clr-namespace:Content.Client.UserInterface.Systems.Inventory.Controls"
                       Title="{Loc 'cannon-console-window-title'}"
-                      MinSize="256 256"
-                      SetSize="648 648">
-    <ui:RadarControl Name="RadarScreen"
-                           MouseFilter="Stop"
-                           Margin="4"
-                           HorizontalExpand="True"
-                           VerticalExpand="True" />
+                      SetSize="878 648"
+                      MinSize="788 320">
+    <GridContainer Columns="2"
+                   HorizontalAlignment="Stretch"
+                   Margin="5 5 5 5">
+        <BoxContainer VerticalAlignment="Center"
+                      HorizontalAlignment="Left"
+                      MinWidth="256"
+                      MaxWidth="256"
+                      Align="Center"
+                      Orientation="Vertical">
+            <BoxContainer Name="AmmoStatusContents" Orientation="Vertical"/>
+        </BoxContainer>
+        <ui:RadarControl Name="RadarScreen"
+                         MouseFilter="Stop"
+                         Margin="4"
+                         HorizontalExpand="True"
+                         VerticalExpand="True" />
+    </GridContainer>
 </controls:FancyWindow>
