--- a/Content.Client/Theta/ShipEvent/UI/TeamViewWindow.xaml
+++ b/Content.Client/Theta/ShipEvent/UI/TeamViewWindow.xaml
@@ -3,8 +3,7 @@
                MinSize="600 500"
                SetSize="600 500">
     <BoxContainer Orientation="Vertical">
-        <Label Name="TeamViewText"
-               Text="." />
+        <RichTextLabel Name="TeamViewText"/>
         <Control MinSize="0 10" />
     </BoxContainer>
 </DefaultWindow>
