--- a/Content.Client/Theta/ShipEvent/UI/TeamViewWindow.xaml
+++ b/Content.Client/Theta/ShipEvent/UI/TeamViewWindow.xaml
@@ -3,7 +3,8 @@
                MinSize="600 500"
                SetSize="600 500">
     <BoxContainer Orientation="Vertical">
-        <RichTextLabel Name="TeamViewText"/>
+        <RichTextLabel Name="ActiveTeams"/>
+        <GridContainer Name="GridContent" Columns="4"/>
         <Control MinSize="0 10" />
     </BoxContainer>
 </DefaultWindow>
