--- a/Content.Client/UserInterface/Systems/Radar/Widgets/RadarGui.xaml
+++ b/Content.Client/UserInterface/Systems/Radar/Widgets/RadarGui.xaml
@@ -6,6 +6,10 @@
                   MinSize="160 160"
                   MaxSize="460 460">
     <PanelContainer HorizontalExpand="True" VerticalExpand="True">
+        <TextureButton Name="ToggleButton"
+                       HorizontalAlignment="Right"
+                       VerticalAlignment="Bottom"
+                       Scale="0.6 0.6"></TextureButton>
         <PanelContainer.PanelOverride>
             <graphics:StyleBoxFlat BackgroundColor="#00000000" />
         </PanelContainer.PanelOverride>
