--- a/Content.Client/Theta/ShipEvent/UI/TeamCreationWindow.xaml
+++ b/Content.Client/Theta/ShipEvent/UI/TeamCreationWindow.xaml
@@ -1,30 +1,31 @@
 ﻿<DefaultWindow xmlns="https://spacestation14.io"
                Title="{Loc 'shipevent-teamcreation-windowtitle'}"
-               MinSize="600 350"
-               MaxSize="600 350"
-               SetSize="600 350">
+               MinSize="600 450"
+               SetSize="600 450">
     <BoxContainer Orientation="Vertical" SeparationOverride="4">
         <Label Name="UserMessage"
                Text="" />
         <Control MinSize="0 10" />
+        
         <Label Name="NameLabel"
                Text="{Loc 'shipevent-teamcreation-name'}"/>
         <Control MinSize="0 10" />
         <LineEdit Name="NameEdit"
                   HorizontalExpand="True"
         />
+        
         <Label Name="ColorLabel"
                Text="{Loc 'shipevent-teamcreation-color'}" />
         <Control MinSize="0 10" />
-        <LineEdit Name="ColorEdit"
-                  HorizontalExpand="True"
-        />
+        <ColorSelectorSliders Name="ColorEdit"/>
+        
         <Label Name="BlacklistLabel"
                Text="{Loc 'shipevent-teamcreation-blacklist'}" />
         <Control MinSize="0 10" />
         <LineEdit Name="BlacklistEdit"
                   HorizontalExpand="True"
         />
+        
         <Button Name="CreationButton"
                 Text="{Loc 'shipevent-teamcreation-creationbutton'}"
         />
